--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -290,6 +290,14 @@
           "@value": "Anvil helper",
           "desc": "Highlights books that have the same enchantment as the ones in the anvil."
         },
+        "itemStarStacksize": {
+          "@value": "Item Star Stacksize",
+          "desc": "Shows the Item Star amount as the stacksize."
+        },
+        "revertMasterStars": {
+          "@value": "Revert Master Stars",
+          "desc": "Reverts the Master Star back to the stacked colored look."
+        },
         "previousServer": {
           "@value": "Previous Server",
           "desc": "Sends a chat message when you join a server you were previously in."
