--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -1236,7 +1236,7 @@
         },
         "dye_hex": {
           "@value": "Dye Hex Color",
-          "desc": "Shows the hex code of the dye on armors. Only visible with Advanced Tooltips enabled (F3 + H)."
+          "desc": "Shows the hex code of the dye on armors."
         }
       },
       "foraging": {
