did something stupid :3

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -983,6 +983,7 @@
               ]
             },
             "outside_skyblock": {
+              "@value": "Outside SkyBlock",
               "desc": "Whether player animals should also be visible outside of SkyBlock."
             }
           }
