--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -1292,21 +1292,31 @@
           }
         }
       },
-      "dungeons": {
-        "@value": "Dungeons",
-        "gambling": {
-          "enabled": {
-            "@value": "CSGO Case Opening",
-            "desc": [
-              "Shows a CSGO case opening animation when opening a dungeon chest.",
-              "",
-              "This feature is recreation from the 1.8 mod <hover 'Click to visit their GitHub'><url 'https://github.com/Ev-Hoang/Bedrock-Chest-Case-Opening'><blue>Bedrock Chest Case Opening</blue></url></hover>."
-            ]
+      "gambling": {
+        "@value": "Gambling",
+        "dungeons": {
+          "separator": {
+            "@value": "Dungeon Chest Gambling",
+            "desc": ""
           },
+          "@value": "Dungeon Chest CSGO Case Opening",
+          "desc": [
+            "Shows a CSGO case opening animation when opening a dungeon chest.",
+            "",
+            "This feature is recreation from the 1.8 mod <hover 'Click to visit their GitHub'><url 'https://github.com/Ev-Hoang/Bedrock-Chest-Case-Opening'><blue>Bedrock Chest Case Opening</blue></url></hover>."
+          ],
           "croesus": {
             "@value": "Also Show Case Opening in Croesus",
             "desc": "Will hide croesus summary before opening the chest, to not spoil the surprise."
           }
+        },
+        "vanguard": {
+          "separator": {
+            "@value": "Vanguard Gambling",
+            "desc": ""
+          },
+          "@value": "Vanguard Slot Machine",
+          "desc": "Shows a slot machine animation when looting a Vanguard."
         }
       }
     },
