--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -1300,11 +1300,7 @@
             "desc": ""
           },
           "@value": "Dungeon Chest CSGO Case Opening",
-          "desc": [
-            "Shows a CSGO case opening animation when opening a dungeon chest.",
-            "",
-            "This feature is recreation from the 1.8 mod <hover 'Click to visit their GitHub'><url 'https://github.com/Ev-Hoang/Bedrock-Chest-Case-Opening'><blue>Bedrock Chest Case Opening</blue></url></hover>."
-          ],
+          "desc": "Shows a CSGO case opening animation when opening a dungeon chest.",
           "croesus": {
             "@value": "Also Show Case Opening in Croesus",
             "desc": "Will hide croesus summary before opening the chest, to not spoil the surprise."
@@ -1317,6 +1313,14 @@
           },
           "@value": "Vanguard Slot Machine",
           "desc": "Shows a slot machine animation when looting a Vanguard."
+        },
+        "credits": {
+          "@value": "Credits",
+          "desc": [
+            "Dungeon Chest Gambling is recreation from the 1.8 mod <hover 'Click to visit their GitHub'><url 'https://github.com/Ev-Hoang/Bedrock-Chest-Case-Opening'><blue>Bedrock Chest Case Opening</blue></url></hover>."
+            "",
+            "Slot Machine textures are created by <hover 'Click to visit her BlueSky'><url 'https://bsky.app/profile/vrachel.bsky.social'><color:#4FB1FF>rachel</color></copy_to_clipboard></hover>."
+          ]
         }
       }
     },
