--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -259,6 +259,13 @@
         "sack_notification_items": {
           "@value": "Sack Notification Items",
           "desc": "The items to show notifications for."
+        },
+        "reply_boop": {
+          "@value": "Reply Boop",
+          "desc": [
+            "Adds a <light_purple>/rboop</light_purple> command that runs /boop on the last person that messaged you.",
+            "<red>Requires to change servers to take into effect.</red>"
+          ]
         }
       },
       "garden": {
