--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -227,6 +227,10 @@
           "hide_items_with_no_value": {
             "@value": "Hide items with no value",
             "desc": "Hides items that have no value from the total sack value."
+          },
+          "show_total_value": {
+            "@value": "Show Total Value",
+            "desc": "Shows the total value of all items in the sack."
           }
         },
         "inventory_buttons": {
@@ -1327,7 +1331,10 @@
       "open_sack": "<dark_gray>Open Sack</dark_gray>"
     },
     "inventory": {
-      "sack_value": "<dark_gray>Sack Value</dark_gray>",
+      "sack_value": {
+        "@value": "<dark_gray>Sack Value</dark_gray>",
+        "total_value": "Total: "
+      },
       "buttons": {
         "configuration": "<white>Button Configuration",
         "item": "Item ID / Skyblock ID",
