--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -1296,6 +1296,17 @@
             "desc": "Will hide croesus summary before opening the chest, to not spoil the surprise."
           }
         }
+      },
+      "hotkeys": {
+        "@value": "Custom Hotkeys",
+        "enabled": {
+          "@value": "Enabled",
+          "desc": "Whether the custom hotkeys are enabled or not."
+        },
+        "sequence_input_delay": {
+          "@value": "Sequence input delay",
+          "desc": "The max delay between two keypresses in a sequence. (in ms)"
+        }
       }
     },
     "garden": {
