feat: Very important player animal improvements (#185)
* mrow :3

* held item :3

* did something stupid :3

* mrow :3

* meow

* Fix memory issues I thinky? :3

* Dont need this

* Use event :3

* Naming

Co-authored-by: ThatGravyBoat <thatgravyboat@gmail.com>

* changeees :3

---------

Co-authored-by: ThatGravyBoat <thatgravyboat@gmail.com>
Co-authored-by: Mona <git@mona.cat>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -579,6 +579,22 @@
                 "random": "Random",
                 "red": "Red",
                 "snow": "Snow"
+              },
+              "own_eepy": {
+                "@value": "Own Eepy",
+                "desc": "zzzZZzzZ"
+              },
+              "other_eepy": {
+                "@value": "Other Eepy",
+                "desc": "zzzZZzzZ"
+              },
+              "own_sleep_delay": {
+                "@value": "Own Sleep Delay",
+                "desc": "Delay before eep zzZZz..."
+              },
+              "other_sleep_delay": {
+                "@value": "Other Sleep Delay",
+                "desc": "Delay before eep zzZZz..."
               }
             },
             "wolf": {
@@ -1014,6 +1030,7 @@
               ]
             },
             "outside_skyblock": {
+              "@value": "Outside SkyBlock",
               "desc": "Whether player animals should also be visible outside of SkyBlock."
             }
           }
