--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -397,6 +397,10 @@
           "@value": "Show museum armour pieces",
           "desc": "Displays all pieces required to finish an armor set in the tooltip in the museum."
         },
+        "watering_can_durability": {
+          "@value": "Water Level as durability",
+          "desc:": "Displays the Water Level of watering cans as durability"
+        },
         "crafthelper": {
           "@value": "Craft Helper",
           "desc": [
